/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.0/userguide/java_library_plugin.html
 */

plugins {
	// Apply the java-library plugin to add support for Java Library
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'io.freefair.lombok' version '8.4'
	id 'signing'
	id 'maven-publish'
	id "org.owasp.dependencycheck" version "8.4.2"
	id "org.sonarqube" version "4.4.1.3373"
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21
group = 'org.localbeat'

/*
 * For snapshot publishing, use: version = n.n.n.n-SNAPSHOT
 * For 'release' publishing, use: version = n.n.n
 *
 */
version = '0.0.1'

archivesBaseName = "localbeat-lib"


configurations {
	testImplementation{
		extendsFrom compileOnly
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
    // Use Maven Central for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

dependencies {
	// ###### 'compileOnly' Dependencies: used internally, not exposed to consumers on their own compile classpath.
	compileOnly 'com.googlecode.libphonenumber:libphonenumber:8.13.19'

	compileOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
	compileOnly 'org.apache.poi:poi:5.2.3'

	// Spring Boot (Starters -> https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#using-boot-starter)
	compileOnly 'org.springframework.boot:spring-boot-starter'
	compileOnly 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'
	compileOnly 'org.springframework.boot:spring-boot-starter-aop'
	compileOnly 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.springframework.boot:spring-boot-starter-mail'

	compileOnly 'org.springframework.security:spring-security-crypto:6.1.3'
	compileOnly 'org.hibernate:hibernate-validator:8.0.1.Final'

	// XSS content validation/filtering
	compileOnly 'org.owasp.encoder:encoder:1.2.3'
	compileOnly 'org.jsoup:jsoup:1.16.1'
	compileOnly 'com.auth0:java-jwt:4.4.0'


	// ###### 'implementation' Dependencies: exposed to consumers (compile/runtime classpaths).
	implementation 'commons-beanutils:commons-beanutils:1.9.4'
	implementation 'commons-io:commons-io:2.13.0'

	// - AWS Imports for the S3 Buckets
	implementation 'software.amazon.awssdk:bom:2.19.8'
	implementation 'software.amazon.awssdk:s3:2.19.8'
	implementation 'software.amazon.awssdk:sns:2.19.8'

	// ###### Testing
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-core:5.2.0'
	testImplementation 'org.mockito:mockito-inline:5.2.0'
	testImplementation('org.springframework.boot:spring-boot-starter-test'){
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	//OpenAPI3 (Swagger)
	compileOnly 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// https://mvnrepository.com/artifact/org.apache.pulsar/pulsar-client
	compileOnly 'org.apache.pulsar:pulsar-client:3.1.0'

	testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
	testRuntimeOnly('org.junit.platform:junit-platform-launcher:1.9.2')
}

// Prevent Spring Boot from looking for a main()
bootJar {
	enabled = false
}
jar {
	enabled = true
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
    useJUnitPlatform()
}

jacocoTestReport {
	reports {
        xml.required = true
        csv.required = false
        html.required = true
	}
	dependsOn test
}

// Set the source path to the delombok source so the javadocs will be built properly
javadoc {
	source = delombok.sourcepath
	javadoc.options.addStringOption('Xdoclint:all', '-quiet')
	options.tags = ["updates", "updates:"]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withJavadocJar()
    withSourcesJar()
}
